--- a/tesi/sections/3/1.tex
+++ b/tesi/sections/3/1.tex
@@ -73,7 +73,7 @@
     From theorem \ref{thm:circ} we know that a sufficient and necessary condition for a matrix $C$ to be circulant is that it has to commute
     with $\text{circ}(0,1,0,\dots,0)$, but what does this mean?
     The matrix $\text{circ}(0,1,0,\dots,0)$ is often known as shift operator, in that it circularly shifts the components of the vector on which it acts.
-    This fact will be discussed in an example in section \cite{sec:3:3}.
+    This fact will be discussed in an example in section \ref{sec:3:3}.
     The commutation relation tells us that a circulant matrix is shift equivariant, more details about equivariance will be given in the third section
     of this chapter.}
 
