--- a/tesi/bibliography.bib
+++ b/tesi/bibliography.bib
@@ -108,3 +108,12 @@
    year =      {1979},
    series =    {Pure and Applied Mathematics},
 }
+
+@book{fourier,
+   title =     {The Fourier Transform and Its Applications},
+   author =    {Ronald Bracewell},
+   publisher = {McGraw Hill},
+   year =      {2000},
+   series =    {McGraw-Hill series in electrical and computer engineering. Circuits and systems},
+   edition =   {3rd ed},
+}
