--- a/tesi/sections/3/5.tex
+++ b/tesi/sections/3/5.tex
@@ -3,6 +3,8 @@
 
     Another approach that can be used to define a convolution is defining spectral convolution with respect to a laplacian operator, in this section
     we will see this abstract and general method on graphs.
+    {\color{red} Loro non danno una motivazione matematica per definire la convoluzione in questo modo, a me è venuta in mente l'analogia con 
+    la meccanica quanistica ma non è una spiegazione, però pensavo di mettere una cosa del genere.}
 
     {\color{blue}
 
@@ -18,6 +20,25 @@
     $\int_\R dk \ch{k}\cc{k} = 1$ and $\braket{m}{k} = \delta(m-k)$ if $\ch{m}$ is also an eigenfunction of the laplacian.
     We shall not prove here that this is an orthonormal generalized basis for our space.
 
+    Since also $\int_\R dx \ch{x}\cc{x} = 1$ any ket $\ch{\psi}$ can be expanded as $\ch{\psi} = \int_\R dx \ch{x}\braket{x}{\psi}$.
+    Furthermore since also $\int_\R dk \ch{k} \cc{k} = 1$ we can apply the identity operator twice on $\ch{\psi}$ to obtain 
+    \[ \ch{\psi} = \int_\R dk \ch{k} c_k \int_\R dk \ch{k} \int_\R dx \braket{k}{x} \braket{x}{\psi}. \]
+    From this last equation we can see that the coefficients $c_k$ in the expansion w.r.t the basis $\ch{k}$ are 
+    \[ c_k = \int_\R dx \braket{k}{x} \braket{x}{\psi} = C \int_\R dx e^{-ikx} \psi(x). \]
+    Notice that $c_k = c(k)$ is the Fourier transform of $\psi(x)$.
+
+    This little excursus was just to see that the coefficient with respect to the laplacian eigenfunctions in the expansion of a ket $\ch{\psi}$ 
+    is the Fourier transform of $\psi(x) = \braket{x}{\psi}$. From this analogy we will define a convolution on graphs.
+
+    To do this we need another theorem whose proof can be found in \cite{fourier}, this theorem is often known as \ii{convolution theorem}.
+
+    \begin{thm}
+        Let $f,g : \R \to \C$, and let $\mc{F}(f), \mc{F}(g) : \R \to \C$ be their respective Fourier transforms, then the fourier tranform of the convolution of $f$ anfd $g$ is equal to
+        \[ \mc{F}(f * g) = \mc{F}(f)\mc{F}(g) . \]
+    \end{thm}  
+    
+    Let's now see how to use this analogy on graphs.
+    
     }
 
     In order to construct a convolutional neural network that classifies data defined on a graph we need a definition of convolution on graphs.
