--- a/tesi/sections/3.tex
+++ b/tesi/sections/3.tex
@@ -25,9 +25,9 @@
         \subfile{sections/3/3} 
         \label{sec:3:3}   
     \end{section}
-    % \begin{section}{}
-    %     \subfile{sections/3/4}   
-    % \end{section}
+    \begin{section}{The Blueprint of Geometric Deep Learning}
+        \subfile{sections/3/4}   
+    \end{section}
     \begin{section}{Spectral Convolution}
         \subfile{sections/3/5}  
     \end{section}
