--- a/tesi/main.tex
+++ b/tesi/main.tex
@@ -65,7 +65,7 @@
 \newtheorem{exa}[thm]{Example}
 
 \theoremstyle{remark}
-\newtheorem*{rem}{Remark}
+\newtheorem{rem}[thm]{Remark}
 \newtheorem{obs}[thm]{Observation}
 
 % \AtAppendix{
