--- a/tesi/sections/2/3.tex
+++ b/tesi/sections/2/3.tex
@@ -4,7 +4,7 @@
     On a graph that admits non trivial gradient and divergence,
     we can define a non trivial laplacian operator on cochains as the divergence of the gradient.
     Since we are going to work on chains we exloit the dual relation to define a laplacian on chains
-    \[d_1d_1^\dagger \cc{i} = \cc{i} \del_1 \del_1^\dagger\],
+    \[d_1d_1^\dagger \cc{i} = \cc{i} \del_1 \del_1^\dagger,\]
     where the operator $\del_1 \del_1^\dagger$ is the dual of $d_1d_1^\dagger$.
     Again we are fixing a canonical basis as above.
 
@@ -44,7 +44,7 @@
     \begin{exa}
         Let $\mc{G}$ be the graph  in \autoref{fig:2:3}, then the $0$-laplacian expressed in terms of the canoncal vertex basis $\{\ket{i}\}_{i \in I}$ is
 
-        \[\begin{pmatrix}
+        \[ \Delta_0 = \begin{pmatrix}
                 2 & -1 & -1 & 0 & 0 & 0 & 0 & 0 & 0 \\
                 -1 & 2 & -1 & 0 & 0 & 0 & 0 & 0 & 0 \\
                 -1 & -1 & 2 & 0 & 0 & 0 & 0 & 0 & 0 \\
