--- a/tesi/sections/2.tex
+++ b/tesi/sections/2.tex
@@ -11,6 +11,7 @@
     \end{section}
     \begin{section}{Laplacian Operators on Graphs}
         \subfile{sections/2/3}
+        \label{sec:2:3}
     \end{section}
     \begin{section}{Laplacian Eigenfunctions in $\R^n$}
         \subfile{sections/2/4}
