--- a/tesi/bibliography.bib
+++ b/tesi/bibliography.bib
@@ -117,3 +117,11 @@
    series =    {McGraw-Hill series in electrical and computer engineering. Circuits and systems},
    edition =   {3rd ed},
 }
+
+@book{axqft,
+   title =     {Introduction to Axiomatic Quantum Field Theory},
+   author =    {N.N. Bogolubov, A.A. Logunov, I.T. Todorov},
+   publisher = {W.A. Benjamin, Inc.},
+   year =      {1975},
+   series =    {Mathematical Physics Monograph Series, 18},
+ }
