--- a/tesi/sections/appendixC/main.tex
+++ b/tesi/sections/appendixC/main.tex
@@ -43,7 +43,7 @@
     is isomorphic to the p-homology group.
 
     \begin{thm}
-        (Eckmann's Theorem) Let $\Delta_p$ be a laplacian operator, then $\ker\Delta_p \simeq H_p$.
+        {\normalfont (Eckmann's Theorem)} Let $\Delta_p$ be a laplacian operator, then $\ker\Delta_p \simeq H_p$.
     \end{thm}
     \begin{proof}
         We recall the definition of laplacian $\Delta_p =: \del_{p+1}\del^\dagger_{p+1} + \del^\dagger_p\del_p$.\\
