--- a/tesi/sections/appendixB/main.tex
+++ b/tesi/sections/appendixB/main.tex
@@ -1,13 +1,18 @@
 \documentclass[../1.tex]{subfiles}
 \begin{document}
    
-    {\color{blue} The so called bra-ket notation was indroduced by Paul Dirac as an effective language in quantum mechanics.
+    The so called bra-ket notation was indroduced by Paul Dirac as an effective language in quantum mechanics.
     Mathematically, if $V$ is any vector space, we call \ii{ket} $\ch{\psi}$ an element of $V$ and \ii{bra} $\cc{\phi}$ an element of $V^*$.
     We will now see some operations on bras and kets.
-    A bra $\cc{\phi} : V \to \K$ acts on a ket in the so called \ii{bra-ket product} $\braket{\phi}{\psi} \in \K$.
+    A bra $\cc{\phi} : V \to \K$ acts on a ket in the so called \ii{bra-ket product} $\braket{\phi}{\psi} \in \K$, which is the evaluation of
+    $\cc{\phi}$ on $\ch{\psi}$.
     Let $A : V \to V$ be a linear operator, then it acts on kets in the so called \ii{operator-ket product} $A\ch{\psi} \in V$.
-    Similarly it acts on bras in the so called \ii{bra-operator product} $\cc{\phi}A \in V^*$.
-    Since a bra maps a ket to a scalar and $A\ch{\psi}$ is also a ket, we can write the \ii{bra-operator-ket product} as $\cc{\phi}A\ch{psi} \in \K$.}
+    Similarly it acts on bras by duality in the so called \ii{bra-operator product} $\cc{\phi}A \in V^*$.
+    If $V$ is finite dimensional and we fix a basis $A: V \to V$ is represented by the matrix $A$ (by abuse of notation),
+    while the dual linear map $A^* : V^* \to V^*$ is represented by its transpose $A^\dagger$.
+    However, in Dirac notation, we see the matrix $A$ acting on the left as a $V$ endomorphism and on the right as a $V^*$ endomorphism,
+    hence no transpose is needed.
+    Since a bra maps a ket to a scalar and $A\ch{\psi}$ is also a ket, we can write the \ii{bra-operator-ket product} as $\cc{\phi}A\ch{\psi} \in \K$.
     In this notation the spectral theorem for selfadjoint operators with a discrete spectrum reads as
     \[ A = \sum_i \ch{a_i}a_i\cc{a_i}, \]
     where $A \ch{a_i} = a_i \ch{a_i}, \; \braket{a_i}{a_j} = \delta_ij$ and $\sum_i \ch{a_i} \cc{a_i} = 1$.
@@ -19,6 +24,7 @@
     where $A \ch{a} = a\ch{a}, \; \braket{a}{a'} = \delta(a-a')$ and $\int da \ch{a} \cc{a} = 1$.
     The relation $\int da \ch{a} \cc{a} = 1$ is called generalized completeness relation and
     is valid only if $\{ \ch{a}\}$ is a generalized orthonormal basis, $1$ is again the identity operator.
+    For further details see \cite{axqft} at $4.1$ and at $1.5$.
 
 
 \end{document}
