--- a/tesi/sections/2/4.tex
+++ b/tesi/sections/2/4.tex
@@ -1,6 +1,6 @@
 \documentclass[../2.tex]{subfiles}
 \begin{document}
-In this section we will present some properties of the eigenfunctions of the classical laplacian operator.
+In this section we present some properties of the eigenfunctions of the classical laplacian operator.
 So we momentarily leave the discrete setting and we recall some well known facts about the continuous one.
 Let's first define the laplacian for smooth functions from $\R^n$ to $\R$. 
 
