--- a/tesi/sections/2/3.tex
+++ b/tesi/sections/2/3.tex
@@ -3,7 +3,7 @@
 
     On a graph that admits non trivial gradient and divergence,
     we can define a non trivial laplacian operator on cochains as the divergence of the gradient.
-    Since we are going to work on chains we exloit the dual relation to define a laplacian on chains
+    Since we are going to work on chains we exploit the dual relation to define a laplacian on chains
     \[d_1d_1^\dagger \cc{i} = \cc{i} \del_1 \del_1^\dagger,\]
     where the operator $\del_1 \del_1^\dagger$ is the dual of $d_1d_1^\dagger$.
     Again we are fixing a canonical basis as above.
@@ -42,7 +42,7 @@
     \end{figure}
 
     \begin{exa}
-        Let $\mc{G}$ be the graph  in \autoref{fig:2:3}, then the $0$-laplacian expressed in terms of the canoncal vertex basis $\{\ket{i}\}_{i \in I}$ is
+        Let $\mc{G}$ be the graph  in \autoref{fig:2:3}, then the $0$-laplacian expressed in terms of the canonical vertex basis $\{\ket{i}\}_{i \in I}$ is
 
         \[ \Delta_0 = \begin{pmatrix}
                 2 & -1 & -1 & 0 & 0 & 0 & 0 & 0 & 0 \\
@@ -116,7 +116,7 @@
         \[ \Delta_1 := \del_1^\dagger \del_1.\]
     \end{defn}
 
-    One intersting property of the $1$-laplacian is that the dimension of its kernel equals the number of independent cycles.
+    One interesting property of the $1$-laplacian is that the dimension of its kernel equals the number of independent cycles.
     This, again, is the Eckmann's theorem this time for $1$-chains.
 
     \begin{exa}
@@ -145,7 +145,7 @@
                 0 & 0 & 0 
             \end{pmatrix} = 3 - 2 =  1. \]
 
-        Since the sum of the three raws is $0$ we can say that the only linearly independent $1$-cycle is $\ket{1,2}+\ket{2,3}+\ket{3,1}$.
+        Since the sum of the three rows is $0$ we can say that the only linearly independent $1$-cycle is $\ket{1,2}+\ket{2,3}+\ket{3,1}$.
         \label{ex:2:3:2}
     \end{exa}
 \end{document}
