--- a/tesi/sections/3/1.tex
+++ b/tesi/sections/3/1.tex
@@ -74,9 +74,7 @@
     The matrix $\text{circ}(0,1,0,\dots,0)$ is often known as shift operator, in that it circularly shifts the components of the vector on which it acts.
     This fact will be discussed in an example in section \ref{sec:3:3}.
     The commutation relation tells us that a circulant matrix is shift equivariant, more details about equivariance will be given in the third section
-    of this chapter.
-
-    This matrix being circulant is also an important constraint on the number of independent components, this reflects the compact support of the filter.
+    of this chapter. This matrix being circulant is also an important constraint on the number of independent components, this reflects the compact support of the filter.
     This might look as a pragmatic solution but it also tells us some truth about the symmetries of the task.
     In some cases the classification of a signal, e.g. voice recognition, is independent of the time when the signal was recorded,
     we can say that the classification is invariant under translations of the signal over time. This is reflected in the fact that if we 
