--- a/tesi/main.tex
+++ b/tesi/main.tex
@@ -116,14 +116,14 @@
         \subfile{sections/front}
     \end{titlepage}
     \begin{abstract}
-        La maggior parte delle architetture di deep learning sono costruite su modelli che imparano una partizione in classi d'equivalenza comprensibili agli umani
+        La maggior parte delle architetture di deep learning permettono alla macchian di imparare una partizione in classi d'equivalenza
         dell'insieme delle funzioni lisce definite su domini euclidei.
         Sebbene questo approccio abbia successo in molte applicazioni, è limitato a una piccola classe di domini.
         Lo scopo del geometric deep learning è quello di estendere questo approccio a domini non euclidei come i grafi e i complessi simpliciali.
     \end{abstract}
     \begin{abstract}
-    Most of the deep learning techniques used today are based on models which learn a partition of the set of smooth functions defined on euclidean 
-    domains into human friendly equivalence classes. Although this approach has been successful in modern machine learning, it only deals with a really 
+    Most of the deep learning techniques used today allow the machine to learn a partition of the set of smooth functions defined on euclidean 
+    domains into task-related equivalence classes. Although this approach has been successful in modern machine learning, it only deals with a really 
     small set of domains. The goal of geometric deep learning is to extend this method to data defined on non euclidean domains such as graphs and simplicial
     complexes.
     \end{abstract}
