--- a/tesi/main.tex
+++ b/tesi/main.tex
@@ -173,6 +173,6 @@
     % \chapter*{Ringraziamenti}
     % \begin{flushright}
     %     \vspace{8cm}
-    %     Vorrei ringraziare la mia famiglia per la possibilità,\\ i miei colleghi per il supporto\\ e il relatore per la pazienza.
+    %     Vorrei ringraziare la mia famiglia per la possibilità,\\ i colleghi e gli amici per il supporto\\ e il relatore per la pazienza.
     % \end{flushright}
 \end{document}
