--- a/tesi/sections/3/2.tex
+++ b/tesi/sections/3/2.tex
@@ -37,7 +37,7 @@
 
     \begin{rem}
         When the domain $\Omega$ is discrete we can choose $\mu$ to be the counting measure, therefore turning the integral into a sum.
-        Furthermore, if $\Omega$ is finite we do not need to take the completion in teh previous proposition.
+        Furthermore, if $\Omega$ is finite we do not need to take the completion in the previous proposition.
     \end{rem}
 
 \end{document}
