--- a/tesi/sections/3/3.tex
+++ b/tesi/sections/3/3.tex
@@ -1,7 +1,7 @@
 \documentclass[../3.tex]{subfiles}
 \begin{document}
    In this section we discuss the symmetries of a classification $C$ from the space of signals $\mc{S}$ to some space $\mc{L}$.
-   For instance in image classification the space of signals is the space of functions defined on im two dimensional grid,
+   For instance in image classification the space of signals is the space of functions defined on a two dimensional grid,
    and a possible and popular classification task is the recognition of the object in the image.
  
 
@@ -19,7 +19,7 @@
         \[ C[g(\phi)] = C[\phi] \quad \forall \phi \in \mc{S}. \]
     \end{defn}
 
-    We will denite the set of these symmetries as $S_C := \{ g : \mc{S} \to \mc{S} \; : \; C[g(\phi)] = C[\phi] \;  \forall \phi \in \mc{S}\}$
+    We will define the set of these symmetries as $S_C := \{ g : \mc{S} \to \mc{S} \; : \; C[g(\phi)] = C[\phi] \;  \forall \phi \in \mc{S}\}$
 
     \begin{prop}
         The set of symmetries $S_C$ of the classification $C$ is a group with the usual function composition.
@@ -88,14 +88,5 @@
        \[ f(\rho(g)\phi) = \rho(g)f(\phi) \quad \forall g \in G, \]
        where $\phi \in \mc{S}$.
    \end{defn}
-
-   An example of equivariance can be seen recalling example \ref{exa:circ}.
-
-   {\color{red}
-   \begin{exa}
-        Se c'è tempo faccio l'esempio di equivarianza utilizzando tutta la teoria della sezione, con un intervallo I che ha 
-        equivariante rispetto al gruppo ciclico, ma non so se ci resco
-   \end{exa}
-   }
-
+   
 \end{document}
